--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   ],
   "devDependencies": {
     "angular": "^1.5.9",
-    "angular-route": "^1.5.9"
+    "angular-route": "^1.5.9",
+    "bootstrap-sass": "^3.3.7"
   }
 }
