--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-jade": "^1.1.0",
     "gulp-livereload": "^3.8.1",
+    "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.9.1",
     "gulp-uglify": "^2.0.0",
     "tiny-lr": "^1.0.3"
