--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
   },
   "homepage": "https://github.com/MaximKrylov/SevenUp#readme",
   "devDependencies": {
+    "babel-preset-es2015": "^6.18.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.1",
     "gulp-jade": "^1.1.0",
     "gulp-livereload": "^3.8.1",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.9.1",
-    "gulp-uglify": "^2.0.0",
     "tiny-lr": "^1.0.3"
   }
 }
