--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-livereload": "^3.8.1",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.9.1",
+    "gulp-uglify": "^2.0.0",
     "tiny-lr": "^1.0.3"
   }
 }
