--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.9.1",
     "gulp-uglify": "^2.0.0",
+    "jshint": "^2.9.4",
     "tiny-lr": "^1.0.3"
   }
 }
